gitops-safe/base/13-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: humor-memory-game
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  type: NodePort
